--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ ipython==8.3.0
 itsdangerous==2.0.1
 jedi==0.18.1
 Jinja2==3.0.3
+joblib==1.1.0
 jsonschema==4.4.0
 jupyter-client==7.2.2
 jupyter-core==4.10.0
@@ -62,12 +63,16 @@ python-dateutil==2.8.2
 pytz==2022.1
 PyYAML==6.0
 pyzmq==22.3.0
+scikit-learn==1.0.2
+scipy==1.7.3
+seaborn==0.11.2
 setuptools==61.2.0
 sip==4.19.13
 six==1.16.0
 snowballstemmer==2.2.0
 stack-data==0.2.0
 tenacity==8.0.1
+threadpoolctl==2.2.0
 tornado==6.1
 traitlets==5.1.1
 wcwidth==0.2.5
