--- a/requirements.txt
+++ b/requirements.txt
@@ -1,81 +1,10 @@
-asttokens==2.0.5
-attrs==21.4.0
-backcall==0.2.0
-Bottleneck==1.3.4
-Brotli==1.0.9
-certifi==2022.6.15
-click==8.0.4
-cycler==0.11.0
 dash==2.5.1
-dash-bootstrap-components==0.13.1
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-labs==1.1.0
-dash-renderer==1.1.2
-dash-table==5.0.0
-debugpy==1.5.1
-decorator==5.1.1
-entrypoints==0.4
-executing==0.8.3
-fastjsonschema==2.15.1
-Flask==2.0.3
-Flask-Compress==1.10.1
-fonttools==4.25.0
-future==0.18.2
-importlib-resources==5.2.0
-ipykernel==6.9.1
-ipython==8.3.0
-itsdangerous==2.0.1
-jedi==0.18.1
-Jinja2==3.0.3
-joblib==1.1.0
-jsonschema==4.4.0
-jupyter-client==7.2.2
-jupyter-core==4.10.0
-kiwisolver==1.4.2
-MarkupSafe==2.1.1
-matplotlib==3.5.1
-matplotlib-inline==0.1.2
-mkl-fft==1.3.1
-mkl-random==1.2.2
-mkl-service==2.4.0
-munkres==1.1.4
-nbformat==5.3.0
-nest-asyncio==1.5.5
-numexpr==2.8.1
+dash_bootstrap_components==0.13.1
+dash_labs==1.1.0
+ipython==8.4.0
 numpy==1.22.3
-packaging==21.3
 pandas==1.4.2
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.0.1
-pip==21.2.4
 plotly==5.6.0
-prompt-toolkit==3.0.20
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pydocstyle==6.1.1
-Pygments==2.11.2
-pyparsing==3.0.4
-pyrsistent==0.18.0
-python-dateutil==2.8.2
-pytz==2022.1
-PyYAML==6.0
-pyzmq==22.3.0
-scikit-learn==1.0.2
-scipy==1.7.3
+scikit_learn==1.1.1
 seaborn==0.11.2
-setuptools==61.2.0
-sip==4.19.13
-six==1.16.0
-snowballstemmer==2.2.0
-stack-data==0.2.0
-tenacity==8.0.1
-threadpoolctl==2.2.0
-tornado==6.1
-traitlets==5.1.1
-wcwidth==0.2.5
-Werkzeug==2.0.3
-wheel==0.37.1
-zipp==3.8.0
+gunicorn
