--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,64 @@
+asttokens==2.0.5
+backcall==0.2.0
+Bottleneck==1.3.4
+Brotli==1.0.9
+certifi==2022.6.15
+click==8.1.3
+cycler==0.11.0
 dash==2.5.1
-dash_bootstrap_components==0.13.1
-dash_labs==1.1.0
-ipython==8.4.0
+dash-bootstrap-components==1.2.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-labs==1.1.0
+dash-table==5.0.0
+decorator==5.1.1
+executing==0.8.3
+Flask==2.1.2
+Flask-Compress==1.12
+fonttools==4.25.0
+importlib-metadata==4.12.0
+ipython==8.3.0
+itsdangerous==2.1.2
+jedi==0.18.1
+Jinja2==3.1.2
+joblib==1.1.0
+kiwisolver==1.4.2
+MarkupSafe==2.1.1
+matplotlib==3.5.1
+matplotlib-inline==0.1.2
+mkl-fft==1.3.1
+mkl-random==1.2.2
+mkl-service==2.4.0
+munkres==1.1.4
+numexpr==2.8.3
 numpy==1.22.3
+packaging==21.3
 pandas==1.4.2
-plotly==5.6.0
-scikit_learn==1.1.1
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.0.1
+pip==21.2.4
+plotly==5.9.0
+prompt-toolkit==3.0.20
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.11.2
+pyparsing==3.0.4
+python-dateutil==2.8.2
+pytz==2022.1
+scikit-learn==1.1.1
+scipy==1.7.3
 seaborn==0.11.2
-gunicorn
+setuptools==61.2.0
+sip==4.19.13
+six==1.16.0
+stack-data==0.2.0
+tenacity==8.0.1
+threadpoolctl==3.1.0
+tornado==6.1
+traitlets==5.1.1
+wcwidth==0.2.5
+Werkzeug==2.1.2
+wheel==0.37.1
+zipp==3.8.0
